# ai-benchmarks

./: .coveragerc  .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  ISSUE_API_ESTIMATES.md  LICENSE  NOTICE  README.md  RELEASING.md  SECURITY.md  build-local.sh  compliance-config.yaml  devops_agent.py  docker-compose.override.yml  docker-compose.yml  finalize_tests.py  fix_api_aliases.py  fix_casing.py  fix_drivers.py  fix_runner_sigs.py  fix_test_indentation.py  fix_tests.py  provision.py  pyproject.toml  pytest.ini  requirements-holmes.txt  requirements.in  requirements.txt  rune.py  rune.yaml  rune.yaml.example  update_drivers.py
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: ci.yml  codeql.yml  coverage.yml  docker.yml  project-backfill.yml  project-sync.yml  publish-pypi.yml  quality-gates.yml  release.yml  test.yml
.vex/: permanent.openvex.json
docs/: API_COMPATIBILITY_PLAN.md  INDEX.md  OLLAMA_QUICK_REFERENCE.md  architecture.md
experiments/: provision.py  setup_models.sh
helm/rune/: Chart.yaml  secret.values.example.yaml  values.yaml
helm/rune/templates/: NOTES.txt  deployment.yaml  rbac.yaml  secret.yaml
home/ubuntu/.rune/: jobs.db
provisioner/: __init__.py  holmes.py  instance.py  models.py  offer.py  template.py
rune/: __init__.py  __main__.py  api.py
rune-operator/: README.md  go.mod  main.go  main_test.go
rune-operator/api/v1alpha1/: groupversion_info.go  runebenchmark_types.go
rune-operator/controllers/: reconciler_and_http_test.go  runebenchmark_controller.go
rune-operator/internal/telemetry/: telemetry.go
rune_bench/: __init__.py  api_backend.py  api_client.py  api_contracts.py  api_server.py  debug.py  debug_pprof.py  interactive.py  job_store.py  metrics.py  workflows.py
rune_bench.egg-info/: SOURCES.txt  requires.txt
rune_bench/agents/: __init__.py  base.py  chain.py  config.py  holmes.py  registry.py  stubs.py
rune_bench/agents/art/: __init__.py  comfyui.py  invokeai.py  (+4 more)
rune_bench/attestation/: __init__.py  factory.py  interface.py  noop.py  tpm2.py
rune_bench/backends/: __init__.py  base.py  bedrock.py  k8s_inference.py  ollama.py  openai.py
rune_bench/catalog/: __init__.py  loader.py  models.py
rune_bench/common/: __init__.py  artifact_utils.py  backend_utils.py  config.py  costs.py  http_client.py  models.py
rune_bench/drivers/: __init__.py  base.py  browser.py  http.py  manual.py  mcp_poc.py  stdio.py  timeouts.py
rune_bench/metrics/: __init__.py  cost.py  pricing.py
rune_bench/ollama/: __init__.py  client.py  models.py
rune_bench/resources/: __init__.py  base.py  existing_backend_provider.py  existing_ollama_provider.py
rune_bench/storage/: __init__.py  base.py  migrate_to_postgres.py  migrator.py  postgres.py  sqlite.py
rune_bench/vastai/: __init__.py  instance.py  offer.py
sbom/: README.txt
security/: vex-register.md
spec/: FailClosedEstimation.tla  JobStateMachine.tla  README.md
terraform/: create_instance.tf
tests/: README.md  conftest.py  test_additional_coverage.py  test_agent_config.py  test_agent_registry.py  test_api_backend_coverage.py  test_api_backend_new.py  test_api_backend_unit.py  test_api_client.py  test_api_contracts.py  test_api_contracts_security.py  test_api_contracts_unit.py  test_api_server.py  test_api_server_coverage.py  test_api_server_new.py  test_api_settings.py  test_async_transports_and_remaining.py  test_attestation.py  test_backend_factory.py  test_backend_stubs.py  test_bedrock_backend.py  test_browser_use_driver.py  test_browseruse_driver.py  test_burpgpt_driver.py  test_catalog_loader.py  test_cli.py  test_cli_coverage.py  test_cli_http_mode.py  test_cognitive_agent.py  test_comprehensive_error_paths.py  test_config.py  test_consensus_driver.py  test_cost_estimation.py  test_cost_estimator_new.py  test_coverage_completion.py  test_coverage_gap_filler.py  test_crewai_driver.py  test_dagger_coverage.py  test_dagger_driver.py  test_db_cli.py  (+76 more)
tests/api/: test_api_backend_unit.py  test_api_client.py  test_api_contracts.py  test_api_contracts_security.py  test_api_server.py  test_api_server_coverage.py  test_api_server_integration.py  test_api_settings.py
tests/backends/: test_k8s_inference_backend.py  test_ollama_client_and_models.py  test_ollama_model_manager.py
tests/core/: test_additional_coverage.py  test_agent_registry.py  test_async_transports_and_remaining.py  test_browser_use.py  test_catalog_loader.py  test_cli.py  test_cli_http_mode.py  test_cognitive_agent.py  test_comprehensive_error_paths.py  test_config.py  test_cost_estimation.py  test_coverage_completion.py  test_coverage_gap_filler.py  test_db_cli.py  test_debug.py  test_debug_pprof.py  test_edge_cases_micro_branches.py  test_elicit_mindgard_clients.py  test_final_coverage.py  test_finops_telemetry.py  test_holmes_runner.py  test_job_store.py  test_k8sgpt_coverage.py  test_langgraph_coverage.py  test_langgraph_driver_mock.py  test_memory_provider.py  test_metrics.py  test_migrate_to_postgres.py  test_new_agents_coverage.py  test_new_transports_and_chain.py  test_pentestgpt_coverage.py  test_preflight.py  test_pricing_sooth_sayer.py  test_regression_suite.py  test_rune_cli_integration.py  test_rune_display_and_limits.py  test_safety_interceptor.py  test_sqlite_storage.py  test_sr_q_004_request_size_limit.py  test_storage_factory.py  (+6 more)
tests/drivers/: test_browseruse_driver.py  test_burpgpt_driver.py  test_cleric_driver.py  test_comfyui_driver.py  test_consensus_driver.py  test_crewai_driver.py  test_drivers.py  test_elicit_driver.py  test_glean_driver.py  test_harvey_driver.py  test_holmes_driver.py  test_http_transport_coverage.py  test_invokeai_driver.py  test_k8sgpt_driver.py  test_langgraph_driver.py  test_metoro_driver.py  test_midjourney_driver.py  test_mindgard_driver.py  test_multion_driver.py  test_pagerduty_driver.py  test_pentestgpt_driver.py  test_perplexity_driver.py  test_radiant_driver.py  test_xbow_driver.py
tests/integration/: test_postgres_storage.py
tests/uat/: test_agent_drivers_uat.py  test_cost_estimation_uat.py
(+132 files in other folders)
