[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rune-bench"
version = "0.1.0"
description = "RUNE — Reliability Use-case Numeric Evaluator"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["benchmark", "kubernetes", "ollama", "llm", "reliability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.9",
    "rich>=13.7",
    "holmesgpt>=0.23.0",
    "git+https://github.com/lpasquali/vast-sdk@update/latest-dependencies",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
    "mypy",
    "bandit",
]

[project.scripts]
rune = "rune.__main__:main"

[project.urls]
Homepage = "https://github.com/lpasquali/rune"
Repository = "https://github.com/lpasquali/rune"
Issues = "https://github.com/lpasquali/rune/issues"

[tool.setuptools.packages.find]
include = ["rune*", "rune_bench*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.mypy]
python_version = "3.11"

[[tool.mypy.overrides]]
module = ["vastai"]
ignore_missing_imports = true

[tool.bandit]
# IEC 62443 4-1 ML4 SI-1: static application security testing
targets = ["rune", "rune_bench"]
exclude_dirs = ["tests"]
skips = ["B101"]   # assert statements used only in test/debug guards
