[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rune-bench"
version = "0.0.0a1"
description = "RUNE — Reliability Use-case Numeric Evaluator"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["benchmark", "kubernetes", "ollama", "llm", "reliability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.9",
    "rich>=13.7",
]

[project.optional-dependencies]
# Extras are intentionally optional to avoid conflicts in shared Python environments.
# Install only what you need:
#
#   pip install "rune-bench[vastai]"   — Vast.ai GPU provisioning
#   pip install "rune-bench[holmes]"   — HolmesGPT SRE agent
#   pip install "rune-bench[all]"      — everything
#
# Run `rune info` to see which extras are currently installed.
holmes = [
    "holmesgpt>=0.23.0",
    # supabase<2.8 required to resolve holmesgpt's postgrest==0.16.8 pin conflict
    "supabase>=2.5,<2.8",
]
vastai = [
    "vastai-sdk>=0.6.0",
]
all = [
    "holmesgpt>=0.23.0",
    "supabase>=2.5,<2.8",
    "vastai-sdk>=0.6.0",
]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
    "mypy",
    "bandit",
]

[project.scripts]
rune = "rune.__main__:main"

[project.urls]
Homepage = "https://github.com/lpasquali/rune"
Repository = "https://github.com/lpasquali/rune"
Issues = "https://github.com/lpasquali/rune/issues"

[tool.setuptools.packages.find]
include = ["rune*", "rune_bench*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.mypy]
python_version = "3.11"

[[tool.mypy.overrides]]
module = ["vastai"]
ignore_missing_imports = true

[tool.bandit]
# IEC 62443 4-1 ML4 SI-1: static application security testing
targets = ["rune", "rune_bench"]
exclude_dirs = ["tests"]
skips = ["B101"]   # assert statements used only in test/debug guards
