[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rune-bench"
version = "0.0.0a5"
description = "RUNE — Reliability Use-case Numeric Evaluator"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["benchmark", "kubernetes", "ollama", "llm", "reliability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.9",
    "rich>=13.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Extras are intentionally optional to avoid conflicts in shared Python environments.
# Install only what you need:
#
#   pip install "rune-bench[vastai]"   — Vast.ai GPU provisioning
#   pip install "rune-bench[holmes]"   — HolmesGPT SRE agent
#   pip install "rune-bench[all]"      — everything
#
# Run `rune info` to see which extras are currently installed.
holmes = [
    "holmesgpt>=0.23.0",
    # supabase<2.29 — relaxed upper bound per Dependabot bump
    "supabase>=2.5,<2.30",
    "litellm>=1.83.7",
    "google-cloud-aiplatform>=1.133.0",
]
aws = [
    "boto3>=1.34",
    "aioboto3>=12.3",
]
vastai = [
    "httpx>=0.27.0",
    "jsonschema>=4.20.0",
]
catalog = [
    "pyyaml>=6.0",
]
all = [
    "holmesgpt>=0.23.0",
    "supabase>=2.5,<2.30",
    "httpx>=0.27.0",
    "jsonschema>=4.20.0",
    "pyyaml>=6.0",
    "boto3>=1.34",
    "aioboto3>=12.3",
]
dev = [
    "pytest>=8",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
    "bandit",
    "types-PyYAML>=6.0.12",
    "respx>=0.22.0",
    "httpx>=0.27.0",
    "jsonschema>=4.20.0",
]
pg = [
    "psycopg[binary,pool]>=3.2",
]

[project.scripts]
rune = "rune.__main__:main"

[project.urls]
Homepage = "https://lpasquali.github.io/rune-docs/"
Documentation = "https://lpasquali.github.io/rune-docs/"
Repository = "https://github.com/lpasquali/rune"
Issues = "https://github.com/lpasquali/rune/issues"

[tool.setuptools.packages.find]
include = ["rune*", "rune_bench*"]

[tool.setuptools.package-data]
"rune_bench" = [
    "catalog/defaults/*.csv",
    "catalog/defaults/*.yaml",
    "storage/migrations/*.sql",
]
"*" = ["py.typed"]

[tool.mypy]
python_version = "3.11"

[tool.bandit]
# IEC 62443 4-1 ML4 SI-1: static application security testing
targets = ["rune", "rune_bench", "tests"]
skips = ["B101"]   # assert statements used only in test/debug guards
